@@ -20,6 +20,7 @@ along with Octave; see the file COPYING.  If not, see
 
 */
 
+// FIXME: All gripe_XXX functions deprecated in 4.2.  Remove file in 4.6
 #if ! defined (octave_gripes_h)
 #define octave_gripes_h 1
 
@@ -34,159 +35,159 @@ class octave_execution_exception;
 // Alphabetized list of gripes.
 ////////////////////////////////////////////////////////////////////////////////
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_2_or_3_dim_plot (void);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_data_conversion (const char *from, const char *to);
 
-extern OCTINTERP_API void
-gripe_data_file_in_path (const std::string& fcn, const std::string& file);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_data_file_in_path (const std::string& fcn, const std::string& file);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_disabled_feature (const std::string& fcn,
                              const std::string& feature,
                              const std::string& pkg="Octave");
 
-extern OCTINTERP_API void
-gripe_divide_by_zero (void);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_divide_by_zero (void);
 
-extern OCTINTERP_API void
-gripe_empty_arg (const char *name, bool is_error);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_empty_arg (const char *name, bool is_error);
 
-extern OCTINTERP_API void
-gripe_implicit_conversion (const char *id, const char *from, const char *to);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_implicit_conversion (const char *id, const char *from, const char *to);
 
-extern OCTINTERP_API void
-gripe_implicit_conversion (const std::string& id, const std::string& from,
-                           const std::string& to);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_implicit_conversion (const std::string& id, const std::string& from,
+                                const std::string& to);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_indexed_cs_list (void);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_invalid_conversion (const std::string& from, const std::string& to);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_invalid_inquiry_subscript (void);
 
-extern OCTINTERP_API void
-gripe_invalid_value_specified (const char *name);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_invalid_value_specified (const char *name);
 
-extern OCTINTERP_API void
-gripe_logical_conversion (void);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_logical_conversion (void);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_nonbraced_cs_list_assignment (void);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_nonconformant (void);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_nonconformant (octave_idx_type r1, octave_idx_type c1,
                           octave_idx_type r2, octave_idx_type c2);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_not_implemented (const char *);
 
 // FIXME: Deprecated in 4.2, remove in 4.6
 OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_not_supported (const char *);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_range_invalid (void);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_square_matrix_required (const char *name);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_string_invalid (void);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_unrecognized_data_fmt (const char *warn_for);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_unrecognized_float_fmt (void);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_user_returned_invalid (const char *name);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_user_supplied_eval (const char *name);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_user_supplied_eval (octave_execution_exception& e, const char *name);
 
-extern OCTINTERP_API void
-gripe_warn_complex_cmp (void);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_warn_complex_cmp (void);
 
-extern OCTINTERP_API void
-gripe_wrong_type_arg (const char *name, const char *s,
-                      bool is_error = true);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_wrong_type_arg (const char *name, const char *s,
+                           bool is_error = true);
 
-extern OCTINTERP_API void
-gripe_wrong_type_arg (octave_execution_exception& e,
-                      const char *name, const char *s,
-                      bool is_error = true);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_wrong_type_arg (octave_execution_exception& e,
+                           const char *name, const char *s,
+                           bool is_error = true);
 
-extern OCTINTERP_API void
-gripe_wrong_type_arg (const char *name, const std::string& s,
-                      bool is_error = true);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_wrong_type_arg (const char *name, const std::string& s,
+                           bool is_error = true);
 
-extern OCTINTERP_API void
-gripe_wrong_type_arg (octave_execution_exception& e,
-                      const char *name, const std::string& s,
-                      bool is_error = true);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_wrong_type_arg (octave_execution_exception& e,
+                           const char *name, const std::string& s,
+                           bool is_error = true);
 
-extern OCTINTERP_API void
-gripe_wrong_type_arg (const char *name, const octave_value& tc,
-                      bool is_error = true);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_wrong_type_arg (const char *name, const octave_value& tc,
+                           bool is_error = true);
 
-extern OCTINTERP_API void
-gripe_wrong_type_arg (octave_execution_exception& e,
-                      const char *name, const octave_value& tc,
-                      bool is_error = true);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_wrong_type_arg (octave_execution_exception& e,
+                           const char *name, const octave_value& tc,
+                           bool is_error = true);
 
-extern OCTINTERP_API void
-gripe_wrong_type_arg (const std::string& name, const octave_value& tc,
-                      bool is_error = true);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_wrong_type_arg (const std::string& name, const octave_value& tc,
+                           bool is_error = true);
 
-extern OCTINTERP_API void
-gripe_wrong_type_arg (octave_execution_exception& e,
-                      const std::string& name, const octave_value& tc,
-                      bool is_error = true);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_wrong_type_arg (octave_execution_exception& e,
+                           const std::string& name, const octave_value& tc,
+                           bool is_error = true);
 
-extern OCTINTERP_API void
-gripe_wrong_type_arg (const char *s,
-                      bool is_error = true);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_wrong_type_arg (const char *s,
+                           bool is_error = true);
 
-extern OCTINTERP_API void
-gripe_wrong_type_arg (octave_execution_exception& e,
-                      const char *s,
-                      bool is_error = true);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_wrong_type_arg (octave_execution_exception& e,
+                           const char *s,
+                           bool is_error = true);
 
-extern OCTINTERP_API void
-gripe_wrong_type_arg (const std::string& s,
-                      bool is_error = true);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_wrong_type_arg (const std::string& s,
+                           bool is_error = true);
 
-extern OCTINTERP_API void
-gripe_wrong_type_arg (octave_execution_exception& e,
-                      const std::string& s,
-                      bool is_error = true);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_wrong_type_arg (octave_execution_exception& e,
+                           const std::string& s,
+                           bool is_error = true);
 
-extern OCTINTERP_API void
-gripe_wrong_type_arg (const octave_value& tc,
-                      bool is_error = true);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_wrong_type_arg (const octave_value& tc,
+                           bool is_error = true);
 
-extern OCTINTERP_API void
-gripe_wrong_type_arg (octave_execution_exception& e,
-                      const octave_value& tc,
-                      bool is_error = true);
+OCTAVE_DEPRECATED OCTINTERP_API extern
+void gripe_wrong_type_arg (octave_execution_exception& e,
+                           const octave_value& tc,
+                           bool is_error = true);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_wrong_type_arg_for_binary_op (const octave_value& op);
 
-OCTAVE_NORETURN OCTINTERP_API extern
+OCTAVE_DEPRECATED OCTAVE_NORETURN OCTINTERP_API extern
 void gripe_wrong_type_arg_for_unary_op (const octave_value& op);
 
 #endif
